# uvlink

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  zensical.toml
.github/workflows/: ci-checks.yml  ci-tests.yml  docs.yml  publish.yml
docs/: CHANGELOG.md  contributing.md  index.md  llms.txt  robots.txt  usage.md
docs/fig/: uvlink.tape
docs/overrides/: main.html
src/uvlink/: cli.py  path.py  project.py
tests/: test_cli.py  test_path_utils.py  test_project.py
