[project]
name = "uvlink"
version = "0.3.0"
description = "CLI helper for keeping Python venvs outside synced project folders"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rich>=14.2.0",
    "typer>=0.20.0",
]

[project.scripts]
uvlink = "uvlink.cli:app"

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=25.11.0",
    "pre-commit>=4.4.0",
    "pytest>=9.0.1",
    "ruff>=0.14.5",
]
